--- a/index.html
+++ b/index.html
@@ -45,19 +45,18 @@
                     <a class="nav-link page-scroll" href="#header">HOME <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#intro">WISATA</a>
+                    <a class="nav-link page-scroll" href="#budaya">BUDAYA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#services">BUDAYA</a>
+                    <a class="nav-link page-scroll" href="#wisata">WISATA</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link page-scroll" href="#callMe">CALL ME</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="#projects">PROJECTS</a>
                 </li>
-
-                <!-- Dropdown Menu -->          
+    
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle page-scroll" href="#about" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">ABOUT</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -65,20 +64,20 @@
                         <div class="dropdown-items-divide-hr"></div>
                         <a class="dropdown-item" href="privacy-policy.html"><span class="item-text">PRIVACY POLICY</span></a>
                     </div>
-                </li>
+                </li> -->
                 <!-- end of dropdown menu -->
 
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link page-scroll" href="#contact">CONTACT</a>
-                </li>
+                </li> -->
             </ul>
             <span class="nav-item social-icons">
-                <span class="fa-stack">
+                <!-- <span class="fa-stack">
                     <a href="#your-link">
                         <span class="hexagon"></span>
                         <i class="fab fa-facebook-f fa-stack-1x"></i>
                     </a>
-                </span>
+                </span> -->
                 <span class="fa-stack">
                     <a href="https://www.instagram.com/kkn.sokong2024/">
                         <span class="hexagon"></span>
@@ -109,11 +108,96 @@
     <!-- end of header -->
 
 
+    <!-- Intro -->
+    <div id="intro" class="basic-1">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5">
+                    <div class="text-container">
+                        <div class="section-title">INTRO</div>
+                        <h2>Desa Sokong</h2>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                        <!-- <p class="testimonial-text">"Our mission here at Aira is to get you through those tough moments relying on our team's expertise in starting and growing companies."</p> -->
+                    </div> <!-- end of text-container -->
+                </div> <!-- end of col -->
+                <div class="col-lg-7">
+                    <div class="image-container">
+                        <img class="img-fluid" src="img/header-img.jpg" alt="alternative">
+                    </div> <!-- end of image-container -->
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of basic-1 -->
+    <!-- end of intro -->
+
+    <!-- Budaya -->
+    <div id="budaya">
+        <div class="head-budaya">
+            <h2>Budaya</h2>
+        </div>
+
+        <!-- Details 1 -->
+        <div id="details" class="accordion">
+            <div class="area-1">
+            </div><!-- end of area-1 on same line and no space between comments to eliminate margin white space --><div class="area-2">
+                
+                <!-- Accordion -->
+                <div class="accordion-container" id="accordionOne">
+                    <h2>Kerajinan Tangan</h2>
+                    <div class="item">
+                        <!-- <div id="headingOne">
+                            <span data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" role="button">
+                                <span class="circle-numbering">1</span><span class="accordion-title">How Can Aria Help Your Business</span>
+                            </span>
+                        </div> -->
+                        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionOne">
+                            <div class="accordion-body">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                            </div>
+                        </div>
+                    </div> <!-- end of item -->
+                </div> <!-- end of accordion-container -->
+                <!-- end of accordion -->
+
+            </div> <!-- end of area-2 -->
+        </div> <!-- end of accordion -->
+        <!-- end of details 1 -->
 
 
+        <!-- Details 2 -->
+        <div class="tabs">
+            <div class="area-1">
+                <div class="tabs-container">
+                    <!-- Tabs Content -->
+                    <div class="tab-content" id="ariaTabsContent">
+                        <!-- Accordion -->
+                        <div class="accordion-container" id="accordionOne">
+                            <h2>Kerajinan Tangan</h2>
+                            <div class="item">
+                                <!-- <div id="headingOne">
+                                    <span data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" role="button">
+                                        <span class="circle-numbering">1</span><span class="accordion-title">How Can Aria Help Your Business</span>
+                                    </span>
+                                </div> -->
+                                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionOne">
+                                    <div class="accordion-body">
+                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                    </div>
+                                </div>
+                            </div> <!-- end of item -->
+                        </div> <!-- end of accordion-container -->
+                        <!-- end of accordion -->
+                    </div> <!-- end of tab-content -->
+                    <!-- end of tabs content -->
 
-    <!-- Projects -->
-	<div id="projects" class="filter">
+                </div> <!-- end of tabs-container -->
+            </div><!-- end of area-1 on same line and no space between comments to eliminate margin white space --><div class="area-2"></div> <!-- end of area-2 -->
+        </div> <!-- end of tabs -->
+        <!-- end of details 2 -->
+    </div>
+
+    <!-- Wisata -->
+	<div id="wisata" class="filter">
 		<div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -258,6 +342,24 @@
         </div> <!-- end of row -->
     </div> <!-- end of lightbox-basic -->
     <!-- end of lightbox -->
+
+
+
+
+
+
+    <!-- Copyright -->
+    <div class="copyright">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <p class="p-small">Copyright © KKN PMD Desa Sokong 2024-2025</p>
+                </div> <!-- end of col -->
+            </div> <!-- enf of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of copyright --> 
+    <!-- end of copyright -->
+
 
     <!-- Scripts -->
     <script src="js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
