update: homepage - nama pantai

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 <img class="img-fluid" src="img/img1.jpg" alt="alternative">
             </div> <!-- end of col -->
             <div class="col-lg-4">
-                <h3>Pantai 1</h3>
+                <h3>Pantai Karang Atas</h3>
                 <hr class="line-heading">
                 <h6>Strategy Development</h6>
                 <p>Need a solid foundation for your business growth plans? Aria will help you manage sales and meet your current needs</p>
@@ -328,7 +328,7 @@
                 <img class="img-fluid" src="img/img4.jpg" alt="alternative">
             </div> <!-- end of col -->
             <div class="col-lg-4">
-                <h3>Pantai 2</h3>
+                <h3>Pantai Debung</h3>
                 <hr class="line-heading">
                 <h6>Strategy Development</h6>
                 <p>Need a solid foundation for your business growth plans? Aria will help you manage sales and meet your current needs</p>
