--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <!-- <div class="section-title">Wisata</div> -->
-                    <h2>Daftar Wisata Desa Sokong</h2>
+                    <h2>Wisata Desa Sokong</h2>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
