--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </span> -->
                 <span class="fa-stack">
                     <a href="https://www.instagram.com/kkn.sokong2024/">
-                        <span class="hexagon"></span>
+                        <!-- <span class="hexagon"></span> -->
                         <i class="fab fa-brands fa-instagram fa-stack-1x"></i>
                     </a>
                 </span>
