test subpage movile view

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
     <!-- Preloader -->
-    <!-- <div class="spinner-wrapper">
+    <div class="spinner-wrapper">
         <div class="spinner">
             <div class="bounce1"></div>
             <div class="bounce2"></div>
             <div class="bounce3"></div>
         </div>
-    </div> -->
+    </div>
     
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
@@ -191,7 +191,7 @@
                     <!-- end of tabs content -->
 
                 </div> <!-- end of tabs-container -->
-            </div><!-- end of area-1 on same line and no space between comments to eliminate margin white space --><div class="area-2"></div> <!-- end of area-2 -->
+            </div><div class="area-2"></div>
         </div> <!-- end of tabs -->
         <!-- end of details 2 -->
     </div>
@@ -268,7 +268,7 @@
                     <p class="testimonial-text">Need a solid foundation for your business growth plans? Aria will help you manage sales and meet your current requirements.</p>
                     <p class="testimonial-author">General Manager</p>
                 </div>
-                <a class="btn-solid-reg" href="wisata/pantai-karang-atas.html">DETAILS</a> <a class="btn-outline-reg mfp-close as-button" href="#projects">BACK</a> 
+                <a class="btn-solid-reg" href="wisata/pantai-karang-atas.html">DETAILS</a> <a class="btn-outline-reg mfp-close as-button" href="#wisata">BACK</a> 
             </div> <!-- end of col -->
         </div> <!-- end of row -->
     </div> <!-- end of lightbox-basic -->
@@ -291,7 +291,7 @@
                     <p class="testimonial-text">Need a solid foundation for your business growth plans? Aria will help you manage sales and meet your current requirements.</p>
                     <p class="testimonial-author">General Manager</p>
                 </div>
-                <a class="btn-solid-reg" href="/wisata/pantai-karang-atas.html">DETAILS</a> <a class="btn-outline-reg mfp-close as-button" href="#projects">BACK</a> 
+                <a class="btn-solid-reg" href="/wisata/pantai-karang-atas.html">DETAILS</a> <a class="btn-outline-reg mfp-close as-button" href="#wisata">BACK</a> 
             </div> <!-- end of col -->
         </div> <!-- end of row -->
     </div> <!-- end of lightbox-basic -->
@@ -314,7 +314,7 @@
                     <p class="testimonial-text">Need a solid foundation for your business growth plans? Aria will help you manage sales and meet your current requirements.</p>
                     <p class="testimonial-author">General Manager</p>
                 </div>
-                <a class="btn-solid-reg" href="/wisata/pantai-karang-atas.html">DETAILS</a> <a class="btn-outline-reg mfp-close as-button" href="#projects">BACK</a> 
+                <a class="btn-solid-reg" href="/wisata/pantai-karang-atas.html">DETAILS</a> <a class="btn-outline-reg mfp-close as-button" href="#wisata">BACK</a> 
             </div> <!-- end of col -->
         </div> <!-- end of row -->
     </div> <!-- end of lightbox-basic -->
@@ -337,7 +337,7 @@
                     <p class="testimonial-text">Need a solid foundation for your business growth plans? Aria will help you manage sales and meet your current requirements.</p>
                     <p class="testimonial-author">General Manager</p>
                 </div>
-                <a class="btn-solid-reg" href="/wisata/pantai-karang-atas.html">DETAILS</a> <a class="btn-outline-reg mfp-close as-button" href="#projects">BACK</a> 
+                <a class="btn-solid-reg" href="/wisata/pantai-karang-atas.html">DETAILS</a> <a class="btn-outline-reg mfp-close as-button" href="#wisata">BACK</a> 
             </div> <!-- end of col -->
         </div> <!-- end of row -->
     </div> <!-- end of lightbox-basic -->
@@ -345,7 +345,68 @@
 
 
 
-
+    <!-- Footer -->
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="text-container about">
+                        <h4>Few Words About Aria</h4>
+                        <p class="white">We're passionate about delivering the best business growth services for companies just starting out as startups or industry players that have established their market position a long tima ago.</p>
+                    </div> <!-- end of text-container -->
+                </div> <!-- end of col -->
+                <div class="col-md-2">
+                    <div class="text-container">
+                        <h4>Links</h4>
+                        <ul class="list-unstyled li-space-lg white">
+                            <li>
+                                <a class="white" href="#your-link">startupguide.com</a>
+                            </li>
+                            <li>
+                                <a class="white" href="terms-conditions.html">Terms & Conditions</a>
+                            </li>
+                            <li>
+                                <a class="white" href="privacy-policy.html">Privacy Policy</a>
+                            </li>
+                        </ul>
+                    </div> <!-- end of text-container -->
+                </div> <!-- end of col -->
+                <div class="col-md-2">
+                    <div class="text-container">
+                        <h4>Tools</h4>
+                        <ul class="list-unstyled li-space-lg">
+                            <li>
+                                <a class="white" href="#your-link">businessgrowth.com</a>
+                            </li>
+                            <li>
+                               <a class="white" href="#your-link">influencers.com</a>
+                            </li>
+                            <li class="media">
+                                <a class="white" href="#your-link">optimizer.net</a>
+                            </li>
+                        </ul>
+                    </div> <!-- end of text-container -->
+                </div> <!-- end of col -->
+                <div class="col-md-2">
+                    <div class="text-container">
+                        <h4>Partners</h4>
+                        <ul class="list-unstyled li-space-lg">
+                            <li>
+                                <a class="white" href="#your-link">unicorns.com</a>
+                            </li>
+                            <li>
+                                <a class="white" href="#your-link">staffmanager.com</a>
+                            </li>
+                            <li>
+                                <a class="white" href="#your-link">association.gov</a>
+                            </li>
+                        </ul>
+                    </div> <!-- end of text-container -->
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+        <!-- </div> end of container -->
+    </div> <!-- end of footer -->  
+    <!-- end of footer -->
 
 
     <!-- Copyright -->
