test subpage mobile view 2

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     </div> <!-- end of button group -->
                     <div class="grid">
                         <div class="element-item pantai">
-                            <a class="popup-with-move-anim" href="#project-1"><div class="element-item-overlay"><span>Pantai 1</span></div><img src="img/img1.jpg" alt="alternative"></a>
+                            <a class="popup-with-move-anim" href="#project-1"><div class="element-item-overlay"><span>Pantai Karang Atas</span></div><img src="img/img1.jpg" alt="alternative"></a>
                         </div>
                         <div class="element-item bukit">
                             <a class="popup-with-move-anim" href="#project-2"><div class="element-item-overlay"><span>Bukit 1</span></div><img src="img/img2.jpg" alt="alternative"></a>
@@ -226,7 +226,7 @@
                             <a class="popup-with-move-anim" href="#project-3"><div class="element-item-overlay"><span>Bukit 2</span></div><img src="img/img3.jpg" alt="alternative"></a>
                         </div>
                         <div class="element-item pantai">
-                            <a class="popup-with-move-anim" href="#project-4"><div class="element-item-overlay"><span>Pantai 2</span></div><img src="img/img4.jpg" alt="alternative"></a>
+                            <a class="popup-with-move-anim" href="#project-4"><div class="element-item-overlay"><span>Pantai Debung</span></div><img src="img/img4.jpg" alt="alternative"></a>
                         </div>
                         <!-- <div class="element-item design development marketing seo">
                             <a class="popup-with-move-anim" href="#project-5"><div class="element-item-overlay"><span>Joy Moments</span></div><img src="images/project-5.jpg" alt="alternative"></a>
@@ -291,7 +291,7 @@
                     <p class="testimonial-text">Need a solid foundation for your business growth plans? Aria will help you manage sales and meet your current requirements.</p>
                     <p class="testimonial-author">General Manager</p>
                 </div>
-                <a class="btn-solid-reg" href="/wisata/pantai-karang-atas.html">DETAILS</a> <a class="btn-outline-reg mfp-close as-button" href="#wisata">BACK</a> 
+                <a class="btn-solid-reg" href="wisata/bukit1.html">DETAILS</a> <a class="btn-outline-reg mfp-close as-button" href="#wisata">BACK</a> 
             </div> <!-- end of col -->
         </div> <!-- end of row -->
     </div> <!-- end of lightbox-basic -->
@@ -314,7 +314,7 @@
                     <p class="testimonial-text">Need a solid foundation for your business growth plans? Aria will help you manage sales and meet your current requirements.</p>
                     <p class="testimonial-author">General Manager</p>
                 </div>
-                <a class="btn-solid-reg" href="/wisata/pantai-karang-atas.html">DETAILS</a> <a class="btn-outline-reg mfp-close as-button" href="#wisata">BACK</a> 
+                <a class="btn-solid-reg" href="wisata/bukit2.html">DETAILS</a> <a class="btn-outline-reg mfp-close as-button" href="#wisata">BACK</a> 
             </div> <!-- end of col -->
         </div> <!-- end of row -->
     </div> <!-- end of lightbox-basic -->
@@ -337,7 +337,7 @@
                     <p class="testimonial-text">Need a solid foundation for your business growth plans? Aria will help you manage sales and meet your current requirements.</p>
                     <p class="testimonial-author">General Manager</p>
                 </div>
-                <a class="btn-solid-reg" href="/wisata/pantai-karang-atas.html">DETAILS</a> <a class="btn-outline-reg mfp-close as-button" href="#wisata">BACK</a> 
+                <a class="btn-solid-reg" href="wisata/pantai-debung.html">DETAILS</a> <a class="btn-outline-reg mfp-close as-button" href="#wisata">BACK</a> 
             </div> <!-- end of col -->
         </div> <!-- end of row -->
     </div> <!-- end of lightbox-basic -->
