refactor: view to pemandangan

--- a/wisata/bukit-murjumeneng.html
+++ b/wisata/bukit-murjumeneng.html
@@ -89,7 +89,7 @@
                 <div class="col-lg-5">
                     <div class="text-container">
                         <h2>Bukit Murjumeneng</h2>
-                        <p class="desc-text-justify">Destinasi wisata bukit ini, menawarkan view daratan sekitar Tanjung hingga memperlihatkan Gili Trawangan, Gili Meno, dan Gili Air. Waktu terbaik untuk mengunjungi bukit Murjumeneng adalah saat sore hari karena menampilkan visual sunset atau matahari terbenam. Disini juga terdapat dua ayunan yang merupakan tempat yang bagus untuk berfoto dengan suasana latar belakang dari atas bukit. Tempat wisata ini berada di pinggir jalan sehingga anda dapat langsung menemukannya.</p>
+                        <p class="desc-text-justify">Destinasi wisata bukit ini, menawarkan pemandangan daratan sekitar Tanjung hingga memperlihatkan Gili Trawangan, Gili Meno, dan Gili Air. Waktu terbaik untuk mengunjungi bukit Murjumeneng adalah saat sore hari karena menampilkan pemandangan sunset atau matahari terbenam. Disini juga terdapat dua ayunan yang merupakan tempat yang bagus untuk berfoto dengan suasana latar belakang dari atas bukit. Tempat wisata ini berada di pinggir jalan sehingga anda dapat langsung menemukannya.</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-7">
