done for preview

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                     <a class="nav-link page-scroll" href="#header">HOME <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#budaya">BUDAYA</a>
+                    <a class="nav-link page-scroll" href="#wisata">WISATA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#wisata">WISATA</a>
+                    <a class="nav-link page-scroll" href="#budaya">BUDAYA</a>
                 </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link page-scroll" href="#callMe">CALL ME</a>
@@ -114,15 +114,15 @@
             <div class="row">
                 <div class="col-lg-5">
                     <div class="text-container">
-                        <div class="section-title">INTRO</div>
+                        <!-- <div class="section-title">INTRO</div> -->
                         <h2>Desa Sokong</h2>
-                        <p class="desc-text-justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                        <p class="desc-text-justify">Desa Sokong adalah sebuah desa yang terletak di Kecamatan Tanjung, Kabupaten Lombok Utara. Sebelum mengalami pemekaran menjadi tiga desa, Desa Sokong terdiri dari 19 dusun. Desa ini memiliki potensi pariwisata dan kebudayaan yang menjadi daya tarik bagi wisatawan, baik domestik maupun mancanegara. Keindahan alam, kerajinan tangan khas, serta tradisi budaya yang masih lestari menjadikan Desa Sokong sebagai destinasi yang menarik untuk dikunjungi.</p>
                         <!-- <p class="testimonial-text">"Our mission here at Aira is to get you through those tough moments relying on our team's expertise in starting and growing companies."</p> -->
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-7">
                     <div class="image-container">
-                        <img class="img-fluid" src="img/header-img.jpg" alt="alternative">
+                        <img class="img-fluid" src="img/kantor-desa-sokong.png" alt="alternative">
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -130,20 +130,21 @@
     </div> <!-- end of basic-1 -->
     <!-- end of intro -->
 
-    <!-- Budaya -->
-    <div id="budaya">
+    <!-- Wisata -->
+    <div id="wisata">
         <div class="h2-title">
-            <h2>Budaya</h2>
+            <h2>Wisata</h2>
         </div>
 
         <!-- Details 1 -->
         <div id="details" class="accordion">
             <div class="area-1">
-            </div><!-- end of area-1 on same line and no space between comments to eliminate margin white space --><div class="area-2">
+                <img src="img/pantai-karang-atas/main-page.jpg" alt="Pantai Karang Atas">
+            </div><div class="area-2">
                 
                 <!-- Accordion -->
                 <div class="accordion-container" id="accordionOne">
-                    <h2>Kerajinan Tangan</h2>
+                    <h2>Pantai Karang Atas</h2>
                     <div class="item">
                         <!-- <div id="headingOne">
                             <span data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" role="button">
@@ -152,7 +153,10 @@
                         </div> -->
                         <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionOne">
                             <div class="accordion-body desc-text-justify">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                Pantai Karang Atas atau juga dikenal Pantai Tanjung Atas merupakan pantai yang ada di Desa Sokong. Pantai ini menjadi tempat yang pantas untuk camping, memancing, dan menikmati keindahan sunset di sore hari. Pantai ini dikelola oleh Kelompok Sadar Wisata atau Pokdarwis Kembang Dangar.
+                            </div>
+                            <div class="button-to-subpage">
+                                <a class="btn-solid-lg page-scroll" href="wisata/pantai-karang-atas.html">Selengkapnya >></a>
                             </div>
                         </div>
                     </div> <!-- end of item -->
@@ -172,7 +176,7 @@
                     <div class="tab-content" id="ariaTabsContent">
                         <!-- Accordion -->
                         <div class="accordion-container" id="accordionOne">
-                            <h2>Kerajinan Tangan</h2>
+                            <h2>Bukit Murjumeneng</h2>
                             <div class="item">
                                 <!-- <div id="headingOne">
                                     <span data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" role="button">
@@ -181,7 +185,10 @@
                                 </div> -->
                                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionOne">
                                     <div class="accordion-body desc-text-justify">
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                        Destinasi wisata bukit ini, menawarkan pemandangan daratan sekitar Tanjung hingga memperlihatkan Gili Trawangan, Gili Meno, dan Gili Air. Waktu terbaik untuk mengunjungi bukit Murjumeneng adalah saat sore hari karena menampilkan pemandangan sunset atau matahari terbenam. Disini juga terdapat dua ayunan yang merupakan tempat yang bagus untuk berfoto dengan suasana latar belakang dari atas bukit. Tempat wisata ini berada di pinggir jalan sehingga anda dapat langsung menemukannya.
+                                    </div>
+                                    <div class="button-to-subpage">
+                                        <a class="btn-solid-lg page-scroll" href="wisata/bukit-murjumeneng.html">Selengkapnya >></a>
                                     </div>
                                 </div>
                             </div> <!-- end of item -->
@@ -191,158 +198,36 @@
                     <!-- end of tabs content -->
 
                 </div> <!-- end of tabs-container -->
-            </div><div class="area-2"></div>
+            </div><div class="area-2">
+                <img src="img/bukit-murjumeneng-1.png" alt="Bukit Murjumeneng">
+            </div>
         </div> <!-- end of tabs -->
         <!-- end of details 2 -->
     </div>
 
-    <!-- Wisata -->
-	<div id="wisata" class="filter">
+    <!-- Budaya -->
+	<div id="budaya" class="filter">
 		<div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <!-- <div class="section-title">Wisata</div> -->
-                    <h2>Wisata Desa Sokong</h2>
+                    <h2>Adat & Budaya</h2>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
-            <div class="row">
-                <div class="col-lg-12">
-                    <!-- Filter -->
-                    <div class="button-group filters-button-group">
-                        <a class="button is-checked" data-filter="*"><span>SHOW ALL</span></a>
-                        <a class="button" data-filter=".pantai"><span>Pantai</span></a>
-                        <a class="button" data-filter=".bukit"><span>Bukit</span></a>
-                        <!-- <a class="button" data-filter=".marketing"><span>MARKETING</span></a> -->
-                        <!-- <a class="button" data-filter=".seo"><span>SEO</span></a> -->
-                    </div> <!-- end of button group -->
-                    <div class="grid">
-                        <div class="element-item pantai">
-                            <a class="popup-with-move-anim" href="#project-1"><div class="element-item-overlay"><span>Pantai Karang Atas</span></div><img src="img/img1.jpg" alt="alternative"></a>
-                        </div>
-                        <div class="element-item bukit">
-                            <a class="popup-with-move-anim" href="#project-2"><div class="element-item-overlay"><span>Bukit 1</span></div><img src="img/img2.jpg" alt="alternative"></a>
-                        </div>
-                        <div class="element-item bukit">
-                            <a class="popup-with-move-anim" href="#project-3"><div class="element-item-overlay"><span>Bukit 2</span></div><img src="img/img3.jpg" alt="alternative"></a>
-                        </div>
-                        <div class="element-item pantai">
-                            <a class="popup-with-move-anim" href="#project-4"><div class="element-item-overlay"><span>Pantai Debung</span></div><img src="img/img4.jpg" alt="alternative"></a>
-                        </div>
-                        <!-- <div class="element-item design development marketing seo">
-                            <a class="popup-with-move-anim" href="#project-5"><div class="element-item-overlay"><span>Joy Moments</span></div><img src="images/project-5.jpg" alt="alternative"></a>
-                        </div>
-                        <div class="element-item design marketing seo">
-                            <a class="popup-with-move-anim" href="#project-6"><div class="element-item-overlay"><span>Spark Events</span></div><img src="images/project-6.jpg" alt="alternative"></a>
-                        </div>
-                        <div class="element-item design marketing">
-                            <a class="popup-with-move-anim" href="#project-7"><div class="element-item-overlay"><span>Casual Wear</span></div><img src="images/project-7.jpg" alt="alternative"></a>
-                        </div>
-                        <div class="element-item design marketing">
-                            <a class="popup-with-move-anim" href="#project-8"><div class="element-item-overlay"><span>Zazoo Apps</span></div><img src="images/project-8.jpg" alt="alternative"></a>
-                        </div> -->
-                    </div> <!-- end of grid -->
-                    <!-- end of filter -->
-                    
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-		</div> <!-- end of container -->
+            <div class="kampung-budaya-section">
+                <div class="prawira-img-container">
+                    <img class="prawira-img" src="img/prawira-village.png" alt="prawira-village">
+                </div>
+                <div class="accordion-body desc-text-justify">
+                    Dusun Prawira merupakan salah satu dusun adat di Desa Sokong yang masih dilestarikan. Dahulu, dusun ini menjadi tempat berkumpulnya para penggawa Kedatuan Sokong yang pernah ada di wilayah ini. Para penggawa adalah orang-orang yang bertugas sebagai penasihat dan pengawal raja. Hingga kini, jejak sejarah kedatuan masih bisa ditemukan dalam berbagai tradisi, bangunan, dan benda-benda peninggalan di dusun ini.
+                </div>
+                <div class="button-to-subpage">
+                    <a class="btn-solid-lg page-scroll" href="wisata/prawira-village.html">Selengkapnya >></a>
+                </div>
+            </div>
+		</div> 
     </div> <!-- end of filter -->
     <!-- end of projects -->
-
-
-    <!-- Project Lightboxes -->
-    <!-- Lightbox -->
-    <div id="project-1" class="lightbox-basic zoom-anim-dialog mfp-hide">
-        <div class="row">
-            <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
-            <div class="col-lg-8">
-                <img class="img-fluid" src="img/img1.jpg" alt="alternative">
-            </div> <!-- end of col -->
-            <div class="col-lg-4">
-                <h3>Pantai Karang Atas</h3>
-                <hr class="line-heading">
-                <h6>Strategy Development</h6>
-                <p>Need a solid foundation for your business growth plans? Aria will help you manage sales and meet your current needs</p>
-                <p>By offering the best professional services and quality products in the market. Don't hesitate and get in touch with us.</p>
-                <div class="testimonial-container">
-                    <p class="testimonial-text">Need a solid foundation for your business growth plans? Aria will help you manage sales and meet your current requirements.</p>
-                    <p class="testimonial-author">General Manager</p>
-                </div>
-                <a class="btn-solid-reg" href="wisata/pantai-karang-atas.html">DETAILS</a> <a class="btn-outline-reg mfp-close as-button" href="#wisata">BACK</a> 
-            </div> <!-- end of col -->
-        </div> <!-- end of row -->
-    </div> <!-- end of lightbox-basic -->
-    <!-- end of lightbox -->
-
-    <!-- Lightbox -->
-    <div id="project-2" class="lightbox-basic zoom-anim-dialog mfp-hide">
-        <div class="row">
-            <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
-            <div class="col-lg-8">
-                <img class="img-fluid" src="img/img2.jpg" alt="alternative">
-            </div> <!-- end of col -->
-            <div class="col-lg-4">
-                <h3>Bukit 1</h3>
-                <hr class="line-heading">
-                <h6>Strategy Development</h6>
-                <p>Need a solid foundation for your business growth plans? Aria will help you manage sales and meet your current needs</p>
-                <p>By offering the best professional services and quality products in the market. Don't hesitate and get in touch with us.</p>
-                <div class="testimonial-container">
-                    <p class="testimonial-text">Need a solid foundation for your business growth plans? Aria will help you manage sales and meet your current requirements.</p>
-                    <p class="testimonial-author">General Manager</p>
-                </div>
-                <a class="btn-solid-reg" href="wisata/bukit1.html">DETAILS</a> <a class="btn-outline-reg mfp-close as-button" href="#wisata">BACK</a> 
-            </div> <!-- end of col -->
-        </div> <!-- end of row -->
-    </div> <!-- end of lightbox-basic -->
-    <!-- end of lightbox -->
-
-    <!-- Lightbox -->
-    <div id="project-3" class="lightbox-basic zoom-anim-dialog mfp-hide">
-        <div class="row">
-            <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
-            <div class="col-lg-8">
-                <img class="img-fluid" src="img/img3.jpg" alt="alternative">
-            </div> <!-- end of col -->
-            <div class="col-lg-4">
-                <h3>Bukit 2</h3>
-                <hr class="line-heading">
-                <h6>Strategy Development</h6>
-                <p>Need a solid foundation for your business growth plans? Aria will help you manage sales and meet your current needs</p>
-                <p>By offering the best professional services and quality products in the market. Don't hesitate and get in touch with us.</p>
-                <div class="testimonial-container">
-                    <p class="testimonial-text">Need a solid foundation for your business growth plans? Aria will help you manage sales and meet your current requirements.</p>
-                    <p class="testimonial-author">General Manager</p>
-                </div>
-                <a class="btn-solid-reg" href="wisata/bukit2.html">DETAILS</a> <a class="btn-outline-reg mfp-close as-button" href="#wisata">BACK</a> 
-            </div> <!-- end of col -->
-        </div> <!-- end of row -->
-    </div> <!-- end of lightbox-basic -->
-    <!-- end of lightbox -->
-
-    <!-- Lightbox -->
-    <div id="project-4" class="lightbox-basic zoom-anim-dialog mfp-hide">
-        <div class="row">
-            <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
-            <div class="col-lg-8">
-                <img class="img-fluid" src="img/img4.jpg" alt="alternative">
-            </div> <!-- end of col -->
-            <div class="col-lg-4">
-                <h3>Pantai Debung</h3>
-                <hr class="line-heading">
-                <h6>Strategy Development</h6>
-                <p>Need a solid foundation for your business growth plans? Aria will help you manage sales and meet your current needs</p>
-                <p>By offering the best professional services and quality products in the market. Don't hesitate and get in touch with us.</p>
-                <div class="testimonial-container">
-                    <p class="testimonial-text">Need a solid foundation for your business growth plans? Aria will help you manage sales and meet your current requirements.</p>
-                    <p class="testimonial-author">General Manager</p>
-                </div>
-                <a class="btn-solid-reg" href="wisata/pantai-debung.html">DETAILS</a> <a class="btn-outline-reg mfp-close as-button" href="#wisata">BACK</a> 
-            </div> <!-- end of col -->
-        </div> <!-- end of row -->
-    </div> <!-- end of lightbox-basic -->
-    <!-- end of lightbox -->
-
 
 
     <!-- Footer -->
