--- a/wisata/pantai-karang-atas.html
+++ b/wisata/pantai-karang-atas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wisata Desa Sokong</title>
+    <title>Pantai Karang Atas - Wisata Desa Sokong</title>
 
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext" rel="stylesheet">
@@ -13,6 +13,7 @@
     <link href="../css/swiper.css" rel="stylesheet">
     <link href="../css/magnific-popup.css" rel="stylesheet">
     <link href="../css/styles.css" rel="stylesheet">
+    <link href="../css/gallery.css" rel="stylesheet">
     
     <!-- Favicon  -->
     <link rel="icon" href="../img/logo.png">
@@ -63,18 +64,14 @@
     <!-- end of navbar -->
 
     <!-- Header -->
-    <header id="header" class="header2">
-        <div class="header2-content">
+    <header id="header" class="header3">
+        <div class="header3-content">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="text-container">
                             <div class="margintop"></div>
                             <h1>Pantai Karang Atas</h1>
-                            <!-- <p class="p-heading p-large">Aria is a top consultancy company specializing in business growth using online marketing and conversion optimization tactics</p>
-                            <a class="btn-solid-lg page-scroll" href="#intro">DISCOVER</a> -->
-                        </div>
-                    </div> <!-- end of col -->
                 </div> <!-- end of row -->
             </div> <!-- end of container -->
         </div> <!-- end of header-content -->
@@ -87,16 +84,13 @@
             <div class="row">
                 <div class="col-lg-5">
                     <div class="text-container">
-                        <div class="section-title">INTRO</div>
-                        <h2>We Offer Some Of The Best Business Growth Services In Town</h2>
-                        <p>Launching a new company or developing the market position of an existing one can be quite an overwhelming processs at times.</p>
-                        <p class="testimonial-text">"Our mission here at Aira is to get you through those tough moments relying on our team's expertise in starting and growing companies."</p>
-                        <div class="testimonial-author">Louise Donovan - CEO</div>
+                        <h2>Pantai Karang Atas</h2>
+                        <p class="desc-text-justify">Pantai Karang Atas atau juga dikenal Pantai Tanjung Atas merupakan pantai yang ada di Desa Sokong. Pantai ini menjadi tempat yang pantas untuk camping, memancing, dan menikmati keindahan sunset di sore hari. Pantai ini dikelola oleh Kelompok Sadar Wisata atau Pokdarwis Kembang Dangar.</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-7">
                     <div class="image-container">
-                        <img class="img-fluid" src="../img/img1.jpg" alt="alternative">
+                        <img class="img-fluid" src="../img/pantai-karang-atas/main-page.jpg" alt="alternative">
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -104,9 +98,33 @@
     </div> <!-- end of basic-1 -->
     <!-- end of intro -->
 
-    <h2 class="location-text-title">Lokasi</h2><br>
+
+    <!-- Gallery Desktop -->
+    <div class="h2-title">
+        <h2>Gallery</h2>
+    </div>
+    <div class="gallery">
+        <div class="img-w"><img src="../img/pantai-karang-atas/1.jpg" alt="pantai-karang-atas-gallery-1" /></div>
+        <div class="img-w"><img src="../img/pantai-karang-atas/2.jpg" alt="pantai-karang-atas-gallery-2" /></div>
+        <div class="img-w"><img src="../img/pantai-karang-atas/3.jpg" alt="pantai-karang-atas-gallery-3" /></div>
+        <div class="img-w"><img src="../img/pantai-karang-atas/4.jpg" alt="pantai-karang-atas-gallery-4" /></div>
+        <div class="img-w"><img src="../img/pantai-karang-atas/5.jpg" alt="pantai-karang-atas-gallery-5" /></div>
+        <div class="img-w"><img src="../img/pantai-karang-atas/6.jpg" alt="pantai-karang-atas-gallery-6" /></div>
+        <div class="img-w"><img src="../img/pantai-karang-atas/7.jpg" alt="pantai-karang-atas-gallery-7" /></div>
+        <div class="img-w"><img src="../img/pantai-karang-atas/8.jpg" alt="pantai-karang-atas-gallery-8" /></div>
+        <div class="img-w"><img src="../img/pantai-karang-atas/main-page.jpg" alt="pantai-karang-atas-gallery-9" /></div>
+    </div>
+      
+
+    <div class="h2-title">
+        <h2>Lokasi</h2>
+    </div>
     <div class="maps-location">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m8!1m3!1d2347.08152653998!2d116.15673638797469!3d-8.37164041292855!3m2!1i1024!2i768!4f13.1!4m6!3e6!4m0!4m3!3m2!1d-8.370797836333173!2d116.1579357158982!5e0!3m2!1sid!2sid!4v1736781097032!5m2!1sid!2sid" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3946.484567126013!2d116.1425398!3d-8.3562742!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zOMKwMjEnMjIuNiJTIDExNsKwMDgnMzMuMiJF!5e0!3m2!1sid!2sid!4v1737796064097!5m2!1sid!2sid" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+
+    <div class="h2-title">
+        <!-- <h2>Budaya</h2> -->
     </div>
 
     <!-- Footer -->
@@ -169,6 +187,7 @@
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         <!-- </div> end of container -->
+
     </div> <!-- end of footer -->  
     <!-- end of footer -->
 
@@ -196,5 +215,6 @@
     <script src="../js/isotope.pkgd.min.js"></script> <!-- Isotope for filter -->
     <script src="../js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
     <script src="../js/scripts.js"></script> <!-- Custom scripts -->
+    <script src="../js/gallery.js"></script> <!-- Gallery scripts -->
 </body>
 </html>
